RATIS-2129. Low replication performance because GrpcLogAppender is often blocked by RaftLog's readLock.